--- a/latex/paper.tex
+++ b/latex/paper.tex
@@ -47,6 +47,7 @@ This method is a meta-algorithm because it is not itself an optimization algorit
 \end{abstract}
 
 \category{G.1.6}{Optimization}{Global optimization, unconstrained optimization}
+\category{F.2.1}{Analysis of Algorithms and Problem Complexity}{Numerical Algorithms and Problems}
 \category{I.2.8}{Problem Solving, Control Methods and Search}{Heuristic methods}
 
 \terms{Algorithms}
